Modified Java Rest